# tasker

./: alembic.ini  dependency.py  docker-compose.yml  exception.py  main.py  pyproject.toml  requirements.txt
app/db/: config.py  database.py  init_db.py
app/handlers/: users.py
app/models/: model.py
app/repository/: user.py
app/schema/: user.py
app/service/: auth.py  user.py
migration/: env.py
migration/versions/: 07742f978384_initial.py  953de8b7e9c5_change_user.py  b124b4bf446f_initial.py  f5e52a99408d_added_test_product.py
