[project]
name = "for-tg-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "avan2urist",email = "aliyakbiarov2.0@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic (>=1.16.4,<2.0.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "redis (>=6.2.0,<7.0.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "psycopg (>=3.2.9,<4.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "pydantic-settings (>=2.10.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
